--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,13 +5,26 @@
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+ </head>
   <body>
     <header class="row">
-       <div> 
-           LOGO
-       </div>
+      
+      <div class="col-3">
+        LOGO
+      </div>
+      
+       <div class="col-4">
+         Splurting out unsolicited advice about entrepreneurship since 2016
+        </div>
+
+        <div class="col-5">
+          <%= link_to 'Contribute', '#' %>
+          <%= link_to 'About', '#' %>
+        </div>  
+         
     </header>
+
+    <br class="clear" />
 
    <%= yield %>
 
