--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -42,6 +42,8 @@
 	color: black;
 	font-size: 25px;
   border-bottom: 1px solid #dfdfdf;
+  font-family: 'kaushan_scriptregular';
+  font-weight: bold;
 
 }
 
@@ -52,5 +54,18 @@ header {
 
 hr {
   clear:both;
+
+}
+
+h1 {
+  font-family: 'kaushan_scriptregular';
+  font-weight: bold;
+  font-size: 48px;
   
+}
+
+h2 {
+  font-family: 'kaushan_scriptregular';
+  font-weight: bold;
+  font-size: 48px;
 }
