--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -68,4 +68,24 @@ h2 {
   font-family: 'kaushan_scriptregular';
   font-weight: bold;
   font-size: 48px;
+
+}
+
+.next-quote {
+  color:#f84342;
+  font-family: 'kaushan_scriptregular';
+  font-size: 20px;
+
+}
+
+.slogan {
+  font-family: 'kaushan_scriptregular';
+  padding-top: 26px;
+}
+
+.footer-blurb {
+  font-family: 'kaushan_scriptregular';
+  text-align: right;
+  font-size: 20px;
+
 }
