--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <header class="row">
       
       <div class="col-3">
+        <%= link_to root_path, class: 'logo' do %>
         <div class="circle">
           <br />
           You know
@@ -18,6 +19,7 @@
           <br />
           to code
         </div>
+        <% end %>
       </div>
       
        <div class="col-4 slogan">
@@ -25,7 +27,7 @@
         </div>
 
         <div class="col-5 links">
-          <%= link_to 'Contribute', '#' %>
+          <%= link_to 'Contribute', new_quote_path %>
           <%= link_to 'About', '#' %>
         </div>  
          
@@ -44,7 +46,7 @@
       <div class="container">
         <div class="row">
          <div class="col-6">
-          <%= link_to "This isn't enough, I need more", "#", class: 'next-quote' %>
+          <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
         </div>
         <div class="col-6 footer-blurb">
            Proudly hacked by <a href="https://wamblescodingportfolio.netlify.com">[Joshua Wamble]</a> <br /> Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
