finished about page!

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -93,3 +93,13 @@ h2 {
 .logo:hover {
   text-decoration: none;
 }
+
+.img-fluid {
+  max-width: auto;
+  height: auto;
+
+}
+
+.about {
+  font-family: 'kaushan_scriptregular';
+}
