--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -1,4 +1,4 @@
-<div class="col-10 offset-1"
+<div class="col-10 offset-1 about"
   <h1>About Splurty</h1>
 
   <p>
@@ -13,33 +13,57 @@
   </p>
 
   <div class='row'>
-  	  <div class="col-12 col-sm-4">
+  	
+      <div class="col-12 col-sm-4">
   	      <%= image_tag 'marco.png', class: 'img-fluid' %>
        </div>
   
      <div class="col-12 col-sm-7 offset-sm-1">
   	     <h2 class="text-center">Marco Morawec</h2>
-  	     <br />
   	       <p>
   	       	  Marco Morawec is a web developer and user experience product manager. He consulted Fortune 500 companies like P&G and John Deere, won Boston's biggest hackathon (<a target="_blank" href="http://www.angelhack.com/"> Angelhack</a>) and most recently led the user experience for <a target="_blank" href="https://www.peertransfer.com/">peerTransfer</a>, building a $500M/year international tuition payment platform. In an earlier life, he travelled around the world on <a target="_blank" href="http://25dollartravel.com">$25/day</a> for an entire year.
   	        </p>
        </div>
     </div>
+
     <br class="clear" />
 
     <div class="row">
-    	<div class="col-12 col-sm-4" style="padding-top:30px;">
+    	
+      <div class="col-12 col-sm-4" style="padding-top:30px;">
     		 <%= image_tag 'ken.png', class: 'img-fluid' %>
     	</div>
+
     	<div class="col-12 col-sm-7 offset-sm-1">
     	  <h2 class="text-center">Ken Mazaika</h2>
-    	  <br />
     	  <p>
     	     Ken Mazaika is a web developer and Ruby on Rails contributor. Previously he was a teach lead at Where.com (<a target="_blank" href="http://bostinno.streetwise.co/2011/04/13/nearbuys-where-rolls-out-daily-deals/">acquired by PayPal</a>) and a member of the PayPal/eBay development team in Boston. In a previous life he turned a <a target="_blank" href="http://yourfreequotes.com/">health insurance quotes generator</a> from a $400/day web application into a $40,000/day business.
     	   </p>
+         <br />
     	</div>     	
+       
+      <div class="row"> 
+        
+        <div class="col-12 col-sm-4" style="padding-top:30px;">
+           <%= image_tag 'me.jpg', class: 'img-fluid' %>
+        </div>
+        
+        <div class="col-12 col-sm-7 offset-sm-1">
+           <h2 class="text-center">Joshua Wamble</h2>
+             <p>
+               Joshua Wamble is just starting out as a web developer. Currently serving in the United States Army and returning from deployment. Tired of jumping from hard job to hard job he decided it was time for a career change. Currently enrolled in <a target="_blank" href="https://bootcamps.vanderbilt.edu/coding/"> Vanderbilt University Coding Bootcamp!</a> This has been an amazing learning oppurtunity and a school im very proud to be a part of!
+             </p>
+
+        </div>       
+
     </div>
 </div>
+
+<br class="clear" />
+<br />
+<br />
+<br />
+<br />
 
 
 
