--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,13 @@
         <% end %>
       </div>
       
-       <div class="col-4 slogan">
+       <div class="col col-sm-4 hidden-xs-down slogan">
          Splurting out unsolicited advice about entrepreneurship since 2016
         </div>
         <!-- button trigger modal -->
-        <div class="col-5 links">
-          <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>            
+        <div class="col-10 offset-1 offset-sm-0 col-sm-5 links">
+          <%= link_to 'Contribute', '#', data: {toggle: 'modal', target: '#myModal'} %>  
+          &nbsp;&nbsp;          
           <%= link_to 'About', about_path %>
         </div>  
          
@@ -48,8 +49,8 @@
              </div>
                  <%= simple_form_for Quote.new do |f| %>
                  <div class="modal-body">
-                   <%= f.input :saying %>
-                   <%= f.input :author %>
+                   <%= f.input :saying, label: "Enter your quote at your leisure" %>
+                   <%= f.input :author, label: "Who has written this?" %>
                  </div>
                   <div class="modal-footer">
                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -59,8 +60,9 @@
 
              <div class="modal-body">
                <%= simple_form_for Quote.new do |f| %>
-               <%= f.input :saying %>
-               <%= f.input :author %>
+               <%= f.input :saying, label: "Enter your quote at your leisure" %>
+               <br />
+               <%= f.input :author, label: "Who has written this?" %>
                <br />
                <%= f.submit 'Create', class: 'btn btn-danger' %>
 
@@ -94,13 +96,11 @@
     <div class="footer">
       <div class="container">
         <div class="row">
-         <div class="col-6">
+         <div class="col-12 col-sm-6">
           <br />
           <%= link_to "This isn't enough, I need more", root_path, class: 'next-quote' %>
-
-
         </div>
-        <div class="col-6 footer-blurb">
+        <div class="col-12 col-sm-6 footer-blurb">
           <br />
            Proudly hacked by <a href="https://wamblescodingportfolio.netlify.com">[Joshua Wamble]</a> <br /> Want to build your own Splurty Web App - <a href="https://online.bootcampspot.com">Learn how to code here</a>
          </div>  
